more mobile hashthravel spacing fix

--- a/mobile.css
+++ b/mobile.css
@@ -8,7 +8,7 @@
 .grid-hash {
   height: 100vh;
   display: grid;
-  grid-template-rows: 120px 1350px 2100px 2100px 1020px 1650px 2150px 2250px 960px 110px;
+  grid-template-rows: 120px 1350px 2200px 2200px 1020px 1650px 2150px 2250px 960px 110px;
   grid-template-columns: 1fr;
 }
 
